# SmallBASIC for GTK
# Copyright(C) 2001-2006 Chris Warren-Smith. Gawler, South Australia
# cwarrens@twpo.com.au
#
# This program is distributed under the terms of the GPL v2.0 or later
# Download the GNU Public License (GPL) from www.gnu.org
# 

noinst_LIBRARIES = libsb_common.a

libsb_common_a_SOURCES =                  \
    bc.c bc.h                             \
    blib.c blib.h                         \
    blib_db.c                             \
    blib_func.c                           \
    blib_graph.c                          \
    blib_math.c                           \
    blib_ui.c blib_ui.h                   \
    blib_sound.c                          \
    brun.c                                \
    ceval.c                               \
    circle.c                              \
    decomp.c                              \
    device.c device.h                     \
    eval.c                                \
    extlib.c                              \
    file.c                                \
    ffill.c                               \
    fmt.c                                 \
    fs_irda.c fs_irda.h                   \
    fs_memo.c fs_memo.c                   \
    fs_pdoc.c fs_pdoc.c                   \
    fs_serial.c fs_serial.c               \
    fs_socket_client.c fs_socket_client.h \
    fs_stream.c fs_stream.h               \
    g_line.c                              \
    geom.c geom.h                         \
    inet.c inet.h                         \
    kw.c kw.h                             \
    match.c match.h                       \
    mem.c                                 \
    panic.c panic.h                       \
    pfill.c                               \
    plot.c                                \
    proc.c                                \
    sberr.c sberr.h                       \
    scan.c scan.h                         \
    str.c str.h                           \
    tasks.c tasks.h                       \
    units.c units.h                       \
    var.c var.h                           \
    vmt.c vmt.h







